Correct tense on USDA employment description

--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -56,7 +56,7 @@ US Department of Agriculture Horticultural Crops Research Unit | Corvallis, OR  
 \textit{- Biological Science Aide}\\
   \vspace{-4.5mm}
  \begin{itemize}
- \item Collected data for patent applications, perform plant propagation, assist with field maintenance.
+ \item Collect data for patent applications, perform plant propagation, assist with field maintenance.
  \end{itemize}
   \vspace{-3.5mm}
  
