Correct Liaiase spelling

--- a/tex/employment.tex
+++ b/tex/employment.tex
@@ -5,7 +5,7 @@ University of Puget Sound Center for Writing, Learning, and Teaching \hfill Sept
  \begin{itemize}
  \item Help mathematics students work through assignments, lead study sessions to prepare students for examinations, and provide a safe and supportive environment to discuss frustrations and build self-confidence.
  \item Conduct academic advising appointments, working with students develop organization, communication, and time-management skills, particularly in the context of executive function or other impairments.
- \item Liase with faculty members to discuss coursework and support students.
+ \item Liaise with faculty members to discuss coursework and support students.
  \item Develop, lead, and participate in professional development activities for student staff.
  \end{itemize}
 \vspace{-3.5mm}
