Correct inconsistent tense of bullet point

--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -4,12 +4,12 @@
 \textit{- Student Researcher} \\
   \vspace{-4.5mm}
  \begin{itemize}
- \item Conduct a review of evolutionary computing literature and synthesized a theoretical analysis of evolvability to draft thesis in collaboration with advisor Dr. America Chambers and reader Dr. Adam Smith
+ \item Conduct a review of evolutionary computing literature and synthesize a theoretical analysis of evolvability to draft thesis in collaboration with advisor Dr. America Chambers and reader Dr. Adam Smith
  \item Perform computational experiments with Genetic Regulatory Network models to probe the relationship between phenotypic plasticity and evolvability.
  \item Prepared and delivered general-audience oral presentations at NW Honors Symposium and at University of Puget Sound.
  \end{itemize}
   \vspace{-3.5mm}
-  
+
 \textit{Software Engineering Term Project} | University of Puget Sound \hfill Fall 2016 \newline
 \textit{- Student Team Member} \\
   \vspace{-4.5mm}
@@ -39,7 +39,7 @@
  \item Presented results and methodology at a poster session on campus attended by faculty, summer research students, and other students.
  \end{itemize}
   \vspace{-3.5mm}
-  
+
 COMAP Mathematical Contest in Modeling | Tacoma, WA \hfill Spring 2015, 2016, 2017 \newline
 \textit{- Contest Participant} \\
   \vspace{-4.5mm}
@@ -59,7 +59,7 @@ US Department of Agriculture Horticultural Crops Research Unit | Corvallis, OR  
  \item Collect data for patent applications, perform plant propagation, assist with field maintenance.
  \end{itemize}
   \vspace{-3.5mm}
- 
+
  John Fowler Laboratory at Oregon State University | Corvallis, OR \hfill Summer 2011, 2012 \newline
 \textit{- Laboratory Assistant} \\
  \vspace{-4.5mm}
