Revise honors thesis bullet points for style

--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -4,9 +4,9 @@
 \textit{- Student Researcher} \\
   \vspace{-4.5mm}
  \begin{itemize}
- \item Conduct a review of evolutionary computing literature and synthesize a theoretical analysis of evolvability to draft thesis in collaboration with advisor Dr. America Chambers and reader Dr. Adam Smith
+ \item Conduct a review of evolutionary computing literature and synthesize a theoretical analysis of evolvability in collaboration with advisor Dr. America Chambers and reader Dr. Adam Smith
  \item Perform computational experiments with Genetic Regulatory Network models to probe the relationship between phenotypic plasticity and evolvability.
- \item Prepared and delivered general-audience oral presentations at NW Honors Symposium and at University of Puget Sound.
+ \item Prepared and delivered general-audience oral presentations at NW Honors Symposium and at the University of Puget Sound.
  \end{itemize}
   \vspace{-3.5mm}
 
