Revise item headers for consistency

--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -1,6 +1,6 @@
 \section{Projects and Research Experience}
 
-\textit{Otis C. Chapman Honors Thesis} | University of Puget Sound \hfill Fall 2016, Spring 2017 \newline
+Otis C. Chapman Honors Thesis | University of Puget Sound, Tacoma, WA \hfill Fall 2016, Spring 2017 \newline
 \textit{- Student Researcher} \\
   \vspace{-4.5mm}
  \begin{itemize}
@@ -10,7 +10,7 @@
  \end{itemize}
   \vspace{-3.5mm}
 
-\textit{Software Engineering Term Project} | University of Puget Sound \hfill Fall 2016 \newline
+Software Engineering Term Project | University of Puget Sound, Tacoma, WA \hfill Fall 2016 \newline
 \textit{- Student Team Member} \\
   \vspace{-4.5mm}
  \begin{itemize}
@@ -19,7 +19,7 @@
  \end{itemize}
   \vspace{-3.5mm}
 
-\textit{Mathematical Biosciences Institute (MBI) Research Experience for Undergraduates} | Newark, NJ \hfill Summer 2016 \newline
+Mathematical Biosciences Institute (MBI) Research Experience for Undergraduates | Newark, NJ \hfill Summer 2016 \newline
 \textit{- Student Researcher} \\
   \vspace{-4.5mm}
  \begin{itemize}
