--- a/tex/employment.tex
+++ b/tex/employment.tex
@@ -1,5 +1,5 @@
 \section{Employment}
-University of Puget Sound Center for Writing, Learning, and Teaching \hfill September 2015 – May 2017 \newline
+University of Puget Sound Center for Writing, Learning, and Teaching | Tacoma, WA \hfill September 2015 – May 2017 \newline
 \textit{ - Tutor and Academic Consultant}  \\
  \vspace{-4.5mm}
  \begin{itemize}
@@ -9,7 +9,7 @@ University of Puget Sound Center for Writing, Learning, and Teaching \hfill Sept
  \item Develop, lead, and participate in professional development activities for student staff.
  \end{itemize}
 \vspace{-3.5mm}
-University of Puget Sound Mathematics and Computer Science Department \hfill  September 2014 – May 2017 \newline
+University of Puget Sound Mathematics and Computer Science Department | Tacoma, WA \hfill  September 2014 – May 2017 \newline
 \textit{- Tutor and Grader} \\
   \vspace{-4.5mm}
 %   \begin{itemize}
@@ -17,8 +17,8 @@ University of Puget Sound Mathematics and Computer Science Department \hfill  Se
 %    \item Grade introduction to computer science homework assignments and provide detailed feedback to students.
 %   \end{itemize}
     \vspace{-3.5mm}
-    
-University of Puget Sound Chemistry Department \hfill September 2013 – May 2016 \newline
+
+University of Puget Sound Chemistry Department | Tacoma, WA \hfill September 2013 – May 2016 \newline
 \textit{- Storeroom Assistant} \\
   \vspace{-4.5mm}
 %   \begin{itemize}
@@ -26,6 +26,6 @@ University of Puget Sound Chemistry Department \hfill September 2013 – May 201
 %   \end{itemize}
     \vspace{-3.5mm}
 
-Network Enterprises, LLC \hfill September 2010 - August 2013 \newline
+Network Enterprises, LLC | Corvallis, OR \hfill September 2010 - August 2013 \newline
 \textit{- Web Design Assistant} \hfill
     \vspace{-3.5mm}
