Revise mouse usv project title

--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -30,11 +30,11 @@ Mathematical Biosciences Institute (MBI) Research Experience for Undergraduates 
  \end{itemize}
   \vspace{-3.5mm}
 
-\textit{Automated Extraction of Mouse Ultrasonic Vocalizations from Noisy Recordings} | Tacoma, WA \hfill Summer 2015 \newline
+NASA Undergraduate Research Scholarship | Tacoma, WA \hfill Summer 2015 \newline
 \textit{- Student Researcher} \\
   \vspace{-4.5mm}
  \begin{itemize}
- \item Designed, applied for grant funding, and carried out project in collaboration with advisor Dr. Adam Smith.
+ \item Designed, applied for grant funding, and carried out project to develop algorithms for automated extraction of mouse ultrasonic vocalizations from noisy recordings in collaboration with advisor Dr. Adam Smith.
  \item Developed and tested filtering algorithms inspired by the Sobel Edge detection method that, after being trained on human-annotated spectrograms of mouse vocalizations, distinguish between true mouse vocalization signals and background noise, achieving 75\% accuracy at 25\% recall.
  \item Presented results and methodology at a poster session on campus attended by faculty, summer research students, and other students.
  \end{itemize}
