Break community activities into separate sections

--- a/tex/community.tex
+++ b/tex/community.tex
@@ -1,5 +1,4 @@
-\section{Community Activities}
-\textit{- STEM Outreach}
+\section{STEM Community Activities}
 \begin{itemize}
 \item University of Puget Sound, computer science departmental mentoring program co-coordinator (2017)
 \begin{itemize}
@@ -14,7 +13,8 @@
 \item ACM International Collegiate Programming Contest, volunteer (2014, 2015)
 \end{itemize}
 \vspace{-3.5mm}
-\textit{- Music Outreach}
+
+\section{Music Community Activities}
 \begin{itemize}
 \item Puget Sound Wind Youth Wind Ensemble, coach (2015-2016)
 \begin{itemize}
@@ -30,7 +30,8 @@
 \item Collage Concert, performer (2014)
 \end{itemize}
 \vspace{-3.5mm}
-\textit{- Miscellaneous}
+
+\section{Miscellaneous Community Activities}
 \begin{itemize}
 \item Atom \texttt{git-edit-atom} package, developer (2016-2017)
 \item National Conference on Peer Tutoring in Writing, session chair and volunteer (2016)
