Use month abbreviations

--- a/tex/employment.tex
+++ b/tex/employment.tex
@@ -1,5 +1,5 @@
 \section{Employment}
-University of Puget Sound Center for Writing, Learning, \& Teaching | Tacoma, WA \hfill September 2015 – May 2017 \newline
+University of Puget Sound Center for Writing, Learning, \& Teaching | Tacoma, WA \hfill Sept. 2015 – May 2017 \newline
 \textit{ - Tutor and Academic Consultant}  \\
  \vspace{-4.5mm}
  \begin{itemize}
@@ -9,7 +9,7 @@ University of Puget Sound Center for Writing, Learning, \& Teaching | Tacoma, WA
  \item Develop, lead, and participate in professional development activities for student staff.
  \end{itemize}
 \vspace{-3.5mm}
-University of Puget Sound Mathematics \& Computer Science Department | Tacoma, WA \hfill  September 2014 – May 2017 \newline
+University of Puget Sound Mathematics \& Computer Science Department | Tacoma, WA \hfill  Sept. 2014 – May 2017 \newline
 \textit{- Tutor and Grader} \\
   \vspace{-4.5mm}
 %   \begin{itemize}
@@ -18,7 +18,7 @@ University of Puget Sound Mathematics \& Computer Science Department | Tacoma, W
 %   \end{itemize}
     \vspace{-3.5mm}
 
-University of Puget Sound Chemistry Department | Tacoma, WA \hfill September 2013 – May 2016 \newline
+University of Puget Sound Chemistry Department | Tacoma, WA \hfill Sept. 2013 – May 2016 \newline
 \textit{- Storeroom Assistant} \\
   \vspace{-4.5mm}
 %   \begin{itemize}
@@ -26,6 +26,6 @@ University of Puget Sound Chemistry Department | Tacoma, WA \hfill September 201
 %   \end{itemize}
     \vspace{-3.5mm}
 
-Network Enterprises, LLC | Corvallis, OR \hfill September 2010 - August 2013 \newline
+Network Enterprises, LLC | Corvallis, OR \hfill Sept. 2010 - Aug. 2013 \newline
 \textit{- Web Design Assistant} \hfill
     \vspace{-3.5mm}
