--- a/tex/projectsresearch.tex
+++ b/tex/projectsresearch.tex
@@ -52,7 +52,7 @@ NASA Undergraduate Research Scholarship | Tacoma, WA \hfill Summer 2015 \newline
  \end{itemize}
   \vspace{-3.5mm}
 
-US Department of Agriculture Horticultural Crops Research Unit | Corvallis, OR  \hfill  June 2013 – Present \newline
+US Department of Agriculture Horticultural Crops Research Unit | Corvallis, OR  \hfill  Jun. 2013 – Present \newline
 \textit{- Biological Science Aide}\\
   \vspace{-4.5mm}
  \begin{itemize}
