Replace and with ampersands in department names

--- a/tex/employment.tex
+++ b/tex/employment.tex
@@ -1,5 +1,5 @@
 \section{Employment}
-University of Puget Sound Center for Writing, Learning, and Teaching | Tacoma, WA \hfill September 2015 – May 2017 \newline
+University of Puget Sound Center for Writing, Learning, \& Teaching | Tacoma, WA \hfill September 2015 – May 2017 \newline
 \textit{ - Tutor and Academic Consultant}  \\
  \vspace{-4.5mm}
  \begin{itemize}
@@ -9,7 +9,7 @@ University of Puget Sound Center for Writing, Learning, and Teaching | Tacoma, W
  \item Develop, lead, and participate in professional development activities for student staff.
  \end{itemize}
 \vspace{-3.5mm}
-University of Puget Sound Mathematics and Computer Science Department | Tacoma, WA \hfill  September 2014 – May 2017 \newline
+University of Puget Sound Mathematics \& Computer Science Department | Tacoma, WA \hfill  September 2014 – May 2017 \newline
 \textit{- Tutor and Grader} \\
   \vspace{-4.5mm}
 %   \begin{itemize}
