--- a/tex/academicawards.tex
+++ b/tex/academicawards.tex
@@ -1,5 +1,6 @@
-\section{Academic Awards} 
+\section{Academic Awards}
  \begin{itemize}
+ \item COMAP Mathematical Competition in Modeling, Finalist (0.7\% award acceptance rate; 2017)
  \item Recipient of National Science Foundation Graduate Research Fellowship Program Honorable Mention (2016)
  \item Dean's List (Spring 2014-Present)
  \item Member of Otis C. Chapman Honors Program (2013-Present)
@@ -10,7 +11,7 @@
  \item Recipient of Puget Sound Association of Phi Beta Kappa Scholarship (regional essay competition; 2016-2017)
  \item Recipient of Honors Alumni Scholarship (departmental award; 2015-2016, 2016-2017)
  \item Recipient of Thomas and Hilda Jack (2014-2015), Sprenger (2015-2016, 2016-2017), and McKnight Memorial (2016-2017) Scholarships in chemistry
- \item Recipient of McGill Family (2015-2016), McKnight (2015-2016), and Thomas and Hilda Jack (2016-2017) Scholarships in mathematics 
+ \item Recipient of McGill Family (2015-2016), McKnight (2015-2016), and Thomas and Hilda Jack (2016-2017) Scholarships in mathematics
  \item Recipient of Beta Theta Pi Men of Principle Scholarship (institutional award; 2014-2015)
  \item Recipient of University of Puget Sound Trustee Scholarship (institutional award; 2013-2017)
 %  \item National AP Scholar (2013)
