--- a/tex/academicawards.tex
+++ b/tex/academicawards.tex
@@ -1,6 +1,6 @@
 \section{Academic Awards}
  \begin{itemize}
- \item COMAP Mathematical Competition in Modeling, Finalist (0.7\% award acceptance rate; 2017)
+ \item COMAP Mathematical Competition in Modeling Finalist (0.7\% award acceptance rate; 2017)
  \item Recipient of National Science Foundation Graduate Research Fellowship Program Honorable Mention (2016)
  \item Dean's List (Spring 2014-Present)
  \item Member of Otis C. Chapman Honors Program (2013-Present)
