Fix Lo Mein eratta

--- a/_posts/2018-11-08-lo-mein.md
+++ b/_posts/2018-11-08-lo-mein.md
@@ -38,8 +38,9 @@ recipe:
     3. warm skillet with sesame oil on high heat
     4. fry tofu for 5 min.
     5. add vegetables, fry for 5 more min.
-    6. add cooked noodles and sauce (to taste), combine
-    7. fry for 2 min.
-    8. serve with fresh green onions
+    6. pour mirin over skillet
+    7. add cooked noodles and sauce (to taste), combine
+    8. fry for 2 min.
+    9. serve with fresh green onions
 
 ---
