Add let's chat to automap post

--- a/_posts/2018-05-23-automap.md
+++ b/_posts/2018-05-23-automap.md
@@ -762,6 +762,16 @@ Manually designing genotype-phenotype maps is heuristic, hard, time-consuming.
 However, deep learning can often also be heuristic, hard, and time-consuming.
 Does AutoMap really make things any easier?
 
+## Let's Chat
+
+I would love to hear your thoughts on AutoMap, especially thoughts about potential applications!!
+
+I started a twitter thread (right below) so we can chat :phone: :phone: :phone:
+
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">We used deep learning to get evolvable genotype-phenotype maps from example high-fitness phenotypes. I wrote this non-technical blog to explain the how and why...  it’s fun with lots of cool graphics 🎇🎆 plus some killer refrigerator poetry from <a href="https://twitter.com/icermsu?ref_src=twsrc%5Etfw">@icermsu</a> 😺😺😺 <a href="https://t.co/aiHJUyinsX">https://t.co/aiHJUyinsX</a></p>&mdash; Matthew A Moreno (@MorenoMatthewA) <a href="https://twitter.com/MorenoMatthewA/status/1005117258220400647?ref_src=twsrc%5Etfw">June 8, 2018</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+Pop on there and drop me a line :fishing_pole_and_fish: or make a comment :raising_hand_woman:
 
 ## Acknowledgements
 
