Fix CSS to work with README.md gists

--- a/_posts/2018-11-14-gist-css.md
+++ b/_posts/2018-11-14-gist-css.md
@@ -42,7 +42,7 @@ Here's the CSS that worked for me.
   max-height:350px;
 }
 
-.gist .blob-wrapper {
+.gist .file {
   max-height:400px;
   overflow:auto !important;
 }
