--- a/_posts/2019-04-04-hand-pies.md
+++ b/_posts/2019-04-04-hand-pies.md
@@ -58,5 +58,6 @@ recipe:
     2. divide dough into 16 balls
     3. roll out dough into ovals, spoon on 1/3 cup filling, brush long edges with egg wash, fold over dough and pinch seal
     4. place pies onto parchment paper on baking sheet
-    5. bake at 400 F for 25 minutes
+    5. brush pie tops with remaining egg wash
+    6. bake at 400 F for 25 minutes
 ---
