--- a/_posts/2019-04-04-hand-pies.md
+++ b/_posts/2019-04-04-hand-pies.md
@@ -13,8 +13,8 @@ recipe:
   ingredients_markdown: |-
     ## dough:
     * 4.5 cups flour
-    * 2 tbsp. salt
-    * 1 1/3 tsp. bakin powder
+    * 2 tsp. salt
+    * 1 1/3 tsp. baking powder
     * 3/4 cups of ice-cold water
     * 4/5 cups of extra-virgin olive oil
     * 1 large egg, beaten
@@ -22,9 +22,9 @@ recipe:
 
     ## filling:
     * 2 lbs. ground chicken
-    * 1 1/3 cup green beans, cut into 1/4 in. pieces
+    * 1 1/3 cups green beans, cut into 1/4 in. pieces
     * 1 cup chopped carrot
-    * 1 1/2 tbsp fresh thyme
+    * 1 1/2 tbsp. fresh thyme
     * 1 1/2 tbsp. minced garlic
     * 3/4 cup green peas, thawed
     * 2 cup unsalted chicken stock
@@ -58,6 +58,6 @@ recipe:
     2. divide dough into 16 balls
     3. roll out dough into ovals, spoon on 1/3 cup filling, brush long edges with egg wash, fold over dough and pinch seal
     4. place pies onto parchment paper on baking sheet
-    5. brush pie tops with remaining egg wash
+    5. brush pies with remaining egg wash
     6. bake at 400 F for 25 minutes
 ---
