Update twitter handle

--- a/blog_professional/_posts/2018-05-23-automap.md
+++ b/blog_professional/_posts/2018-05-23-automap.md
@@ -626,7 +626,7 @@ For more details, go get the PDF [here](https://github.com/mmore500/gecco-2018/r
 Our paper *Learning an Evolvable Genotype-Phenotype Mapping* is really just a proof-of-concept demonstration.
 We're really excited to explore our AutoMap technique (including potential pitfalls) further, demonstrate it on challenging problems, and devise extensions.
 
-**Shameless plug:** keep up with me :innocent: and developments with this research :rocket: as they happen on twitter [@mmore500](https://twitter.com/mmore500) :bird:.
+**Shameless plug:** keep up with me :innocent: and developments with this research :rocket: as they happen on twitter [@MorenoMatthewA](https://twitter.com/MorenoMatthewA) :bird:.
 
 ### Deep Learning: Not Just for Toy Problems
 
