--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -4,7 +4,12 @@ title: "Curated Resources for Mentees"
 date: 2020-06-04
 ---
 
-a.k.a., my very own soap box (TM)... odds & ends I've found useful, interesting, and/or wish I had seen earlier on
+a.k.a., my very own soap box (TM)...
+odds & ends I've found useful, interesting, and/or wish I had seen earlier on.
+
+I found that I was repeatedly re-googling links to share with new mentees, so I decided to shove it all in one place.
+
+:star2: markers denote highlights
 
 ## Version Control
 
@@ -20,7 +25,7 @@ a.k.a., my very own soap box (TM)... odds & ends I've found useful, interesting,
 
 ## Comments & Documentation
 
-* [5 Best Practices for Commenting Your Code](https://improvingsoftware.com/2011/06/27/5-best-practices-for-commenting-your-code/)
+* [5 Best Practices for Commenting Your Code](https://improvingsoftware.com/20:star2: 11/06/27/5-best-practices-for-commenting-your-code/)
 * [Putting comments in code: the good, the bad, and the ugly.](https://www.freecodecamp.org/news/code-comments-the-good-the-bad-and-the-ugly-be9cc65fbf83/)
 * :star2: [How to Write Good Documentation (And Its Essential Elements)](https://www.sohamkamani.com/blog/how-to-write-good-documentation/)
 
