--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -22,6 +22,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
   * :star2: Rule [13](https://www.gutenberg.org/files/37134/37134-h/37134-h.htm#Rule_13)
   * (great resource for effective writing in general, too)
 * :star2: [An emoji guide for your commit messages](https://gitmoji.carloscuesta.me/)
+* use `git add -p` to spot-check your changes while preparing a commit
 
 ## Comments & Documentation
 
