Add social section

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -130,3 +130,12 @@ getting around faster:
 * [The Origins of the <Blink> Tag](http://www.montulli.org/theoriginofthe%3Cblink%3Etag)
 * [A Collection of O'rly book Covers](https://boyter.org/2016/04/collection-orly-book-covers/)
 * [Not My Job: We Quiz Rocket Scientist Tiera Fletcher On 'Space Jam'](https://www.npr.org/2019/07/13/740994717/not-my-job-we-quiz-rocket-scientist-tiera-fletcher-on-space-jam)
+
+## Let's Chat!
+
+What resources have you found most useful on your journey as a programmer?
+What else should I add to this list?
+
+I started a twitter thread (right below) so we can chat :phone: :phone: :phone:
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">nothing to see here, just a placeholder tweet 🐦</p>&mdash; Matthew A Moreno (@MorenoMatthewA) <a href="https://twitter.com/MorenoMatthewA/status/1054071480512843776?ref_src=twsrc%5Etfw">October 21, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
