Add Advice from an Old Programmer

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -105,6 +105,7 @@ getting around faster:
 * [Life as a Black Academic](https://twitter.com/JessicaLWareLab/status/1268625256224260097/photo/1)
 * [My Body is a Book of Rules](http://www.worldcat.org/oclc/935466620)
 * [SimCopter Easter Egg](https://https://www.latimes.com/archives/la-xpm-1996-12-07-fi-6521-story.html)
+* [Advice from an Old Programmer](https://www.nagekar.com/2018/06/advice-from-an-old-programmer-zed-shaw.html)
 
 ## Miscellaneous Clever Tools I Like
 
