Try fixing emoji

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -109,7 +109,7 @@ getting around faster:
 
 ## Miscellaneous Clever Tools I Like
 
-... some of which I made :shrug:
+... some of which I made :man_shrugging:
 
 * [your very own static url shortener](https://github.com/mmore500/hopto)
   * including password-protected links
