Fix list layout

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -115,7 +115,8 @@ getting around faster:
   * including password-protected links
   * [store & extract metadata in filenames](https://github.com/mmore500/keyname)
 * [Journal Like a Hacker](https://github.com/mmore500/templ)
-* [Blog Like a Hacker](https://tom.preston-werner.com/2008/11/17/blogging-like-a-hacker.html)* [write web apps in C++](https://github.com/devosoft/Empirical)
+* [Blog Like a Hacker](https://tom.preston-werner.com/2008/11/17/blogging-like-a-hacker.html)
+* [write web apps in C++](https://github.com/devosoft/Empirical)
 * [compute-cluster friendly containerization](https://sylabs.io/singularity/)
 * [open science framework](https://osf.io)
   * and their awesome [command-line uploader](https://github.com/osfclient/osfclient)
