Add good version control tips

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -23,6 +23,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
   * (great resource for effective writing in general, too)
 * :star2: [An emoji guide for your commit messages](https://gitmoji.carloscuesta.me/)
 * use `git add -p` to spot-check your changes while preparing a commit
+* [Version control concepts and best practices](https://homes.cs.washington.edu/~mernst/advice/version-control.html)
 
 ## Comments & Documentation
 
