--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -9,7 +9,7 @@ odds & ends I've found useful, interesting, and/or wish I had seen earlier on.
 
 I found that I was repeatedly re-googling links to share with new mentees, so I decided to shove it all in one place.
 
-:star2: markers denote highlights
+:star2: markers denote highlights.
 
 ## Version Control
 
