--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -66,7 +66,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 * [static initialization order fiasco](https://isocpp.org/wiki/faq/ctors#static-init-order)
   * "A subtle way to crash your program." :wine_glass:
 * [type aliasing](https://en.cppreference.com/w/cpp/language/reinterpret_cast)
-  * basically, never cast pointers to types besides `char *` or `void *`
+  * basically, never cast pointers to pointer types besides `char *` or `void *`
 * [macro operator precedence](https://gcc.gnu.org/onlinedocs/cpp/Operator-Precedence-Problems.html)
   * macro `X`: `1 + 1`
   * macro `Y`: `X * X`
