--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -130,7 +130,7 @@ getting around faster:
 * [The Story of Mel](http://www.catb.org/~esr/jargon/html/story-of-mel.html)
 * [A Story About ‘Magic'](http://www.catb.org/~esr/jargon/html/magic-story.html)
 * [The case of the 500-mile email](https://www.ibiblio.org/harris/500milemail.html)
-* [The Origins of the <Blink> Tag](http://www.montulli.org/theoriginofthe%3Cblink%3Etag)
+* [The Origins of the \<Blink\> Tag](http://www.montulli.org/theoriginofthe%3Cblink%3Etag)
 * [A Collection of O'rly book Covers](https://boyter.org/2016/04/collection-orly-book-covers/)
 * [Not My Job: We Quiz Rocket Scientist Tiera Fletcher On 'Space Jam'](https://www.npr.org/2019/07/13/740994717/not-my-job-we-quiz-rocket-scientist-tiera-fletcher-on-space-jam)
 
