Add link from @alackles & start Ethics section

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -90,11 +90,15 @@ getting around faster:
 * [John Füegi and Jo Francis. 2015. "Lovelace & Babbage and the creation of the 1843 'notes'". ACM Inroads 6, 3 (August 2015), 78-86. http://dx.doi.org/10.1145/2810201](https://dl.acm.org/doi/10.1145/2810201)
 * [Donald Knuth and Luis Trabb Pardo. 1976. "The Early Development of Programming Languages." Computer Science Department, Stanford University](http://bitsavers.trailing-edge.com/pdf/stanford/cs_techReports/STAN-CS-76-562_EarlyDevelPgmgLang_Aug76.pdf)
 * [Edsger W. Dijkstra. 1972. "The Humble Programmer." Commun. ACM 15, 10 (October 1972), 859-866. DOI=10.1145/355604.361591](https://dl.acm.org/doi/10.1145/355604.361591)
-* [KILLED BY A MACHINE: THE THERAC-25](https://hackaday.com/2015/10/26/killed-by-a-machine-the-therac-25/)
-* ["Uncle" Bob Martin - "The Future of Programming"](https://www.youtube.com/watch?v=ecIWPzGEbFc)
-  * history romp that ends with discussion of programming as a discipline and profession
 * [AT&T Archives: The UNIX Operating System](https://www.youtube.com/watch?v=tc4ROCJYbm0)
 * [There Aren't Enough Women in Tech. Here's Why.](https://www.npr.org/sections/money/2017/01/30/511788585/there-arent-enough-women-in-tech-heres-why)
+
+## Ethics
+
+* [KILLED BY A MACHINE: THE THERAC-25](https://hackaday.com/2015/10/26/killed-by-a-machine-the-therac-25/)
+* [How Technology Led a Hospital To Give a Patient 38 Times His Dosage](https://www.wired.com/2015/03/how-technology-led-a-hospital-to-give-a-patient-38-times-his-dosage/)
+* ["Uncle" Bob Martin - "The Future of Programming"](https://www.youtube.com/watch?v=ecIWPzGEbFc)
+  * starts out as a history romp but ends with discussion of programming as a discipline and profession
 
 ## Personal Narratives & Anecdotes
 
