Add razor blades video

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -99,6 +99,8 @@ getting around faster:
 * [How Technology Led a Hospital To Give a Patient 38 Times His Dosage](https://www.wired.com/2015/03/how-technology-led-a-hospital-to-give-a-patient-38-times-his-dosage/)
 * ["Uncle" Bob Martin - "The Future of Programming"](https://www.youtube.com/watch?v=ecIWPzGEbFc)
   * starts out as a history romp but ends with discussion of programming as a discipline and profession
+* [Why Are There Razor Blades In My Walls?](https://www.youtube.com/watch?v=79GlUDVJXaA)
+  * a fun parable of technical debt
 
 ## Personal Narratives & Anecdotes
 
