Star life as a black academic

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -109,7 +109,7 @@ getting around faster:
 * [Twitter Thread on MIT Media Lab by Dr. Sarah Traber](https://twitter.com/SarahTaber_bww/status/1171895657872941056)
 * [Why I’m Firing Michigan State: Sexual Harassment, Online Harassment, and Utter Institutional Failure](https://medium.com/@drjoy/why-im-firing-michigan-state-sexual-harassment-online-harassment-and-utter-institutional-6663a6bde68e)
 * [Reflecting On One Very, Very Strange Year At Uber](https://www.susanjfowler.com/blog/2017/2/19/reflecting-on-one-very-strange-year-at-uber)
-* [Life as a Black Academic](https://twitter.com/JessicaLWareLab/status/1268625256224260097/photo/1)
+* :star2: [Life as a Black Academic](https://twitter.com/JessicaLWareLab/status/1268625256224260097/photo/1)
 * [My Body is a Book of Rules](http://www.worldcat.org/oclc/935466620)
 * [SimCopter Easter Egg](https://https://www.latimes.com/archives/la-xpm-1996-12-07-fi-6521-story.html)
 * [Advice from an Old Programmer](https://www.nagekar.com/2018/06/advice-from-an-old-programmer-zed-shaw.html)
