Add underhanded C link
props @alackles for the referral!

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -139,6 +139,8 @@ getting around faster:
 * [The Origins of the \<Blink\> Tag](http://www.montulli.org/theoriginofthe%3Cblink%3Etag)
 * [A Collection of O'rly book Covers](https://boyter.org/2016/04/collection-orly-book-covers/)
 * [Not My Job: We Quiz Rocket Scientist Tiera Fletcher On 'Space Jam'](https://www.npr.org/2019/07/13/740994717/not-my-job-we-quiz-rocket-scientist-tiera-fletcher-on-space-jam)
+* [The Underhanded C Contest](http://underhanded-c.org/) :smiling_imp:
+  * [Your program must inexplicably misroute a piece of luggage if the right kind of free text comment is provided by the check-in clerk](http://underhanded-c.org/_page_id_22.html)
 
 ## Let's Chat!
 
