Fix misplaced :star2: inside url

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -27,7 +27,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 
 ## Comments & Documentation
 
-* [5 Best Practices for Commenting Your Code](https://improvingsoftware.com/20:star2: 11/06/27/5-best-practices-for-commenting-your-code/)
+* [5 Best Practices for Commenting Your Code](https://improvingsoftware.com/2011/06/27/5-best-practices-for-commenting-your-code/)
 * [Putting comments in code: the good, the bad, and the ugly.](https://www.freecodecamp.org/news/code-comments-the-good-the-bad-and-the-ugly-be9cc65fbf83/)
 * :star2: [How to Write Good Documentation (And Its Essential Elements)](https://www.sohamkamani.com/blog/how-to-write-good-documentation/)
 
