Add The Most Vexing Parse

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -71,6 +71,10 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
   * macro `X`: `1 + 1`
   * macro `Y`: `X * X`
   * aaand... `Y == 5`
+* [The Most Vexing Parse](https://www.fluentcpp.com/2018/01/30/most-vexing-parse/)
+  * `A a();`
+  * you're just tryna make an `A` called `a`
+  * but compiler bae thinks you're tryna declare a function `a` that returns an `A`
 
 ## Text Editor & Shell
 
