--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -70,7 +70,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 * [macro operator precedence](https://gcc.gnu.org/onlinedocs/cpp/Operator-Precedence-Problems.html)
   * macro `X`: `1 + 1`
   * macro `Y`: `X * X`
-  * aaand... `Y == 5`
+  * aaand... `Y == 3` (not 4)
 * [The Most Vexing Parse](https://www.fluentcpp.com/2018/01/30/most-vexing-parse/)
   * `A a();`
   * you're just tryna make an `A` called `a`
