Add more git info

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -24,6 +24,8 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 * :star2: [An emoji guide for your commit messages](https://gitmoji.carloscuesta.me/)
 * use `git add -p` to spot-check your changes while preparing a commit
 * [Version control concepts and best practices](https://homes.cs.washington.edu/~mernst/advice/version-control.html)
+* [Git commit fixup and autosquash](https://blog.sebastian-daschner.com/entries/git-commit-fixup-autosquash)
+* [pull with rebase](http://gitready.com/advanced/2009/02/11/pull-with-rebase.html)
 
 ## Comments & Documentation
 
