--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -77,6 +77,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
   * `A a();`
   * you're just tryna make an `A` called `a`
   * but compiler bae thinks you're tryna declare a function `a` that returns an `A`
+* start reading from the TOP of horribly long compiler error messages: `unbuffer make 2&>1 | less -r`
 
 ## Text Editor & Shell
 
