Add documentation links

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -29,6 +29,8 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 
 ## Comments & Documentation
 
+* [C++ projects documentation best practices](https://medium.com/@stepan.prokipchyn/c-projects-documentation-best-practices-bd82139f7a17)
+* [C++ Doxygen Notes](https://developer.lsst.io/cpp/api-docs.html#cpp-doxygen-notes)
 * [5 Best Practices for Commenting Your Code](https://improvingsoftware.com/2011/06/27/5-best-practices-for-commenting-your-code/)
 * [Putting comments in code: the good, the bad, and the ugly.](https://www.freecodecamp.org/news/code-comments-the-good-the-bad-and-the-ugly-be9cc65fbf83/)
 * :star2: [How to Write Good Documentation (And Its Essential Elements)](https://www.sohamkamani.com/blog/how-to-write-good-documentation/)
