Add benchmarking info

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -57,13 +57,17 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 * [Better Code: Runtime Polymorphism - Sean Parent](https://www.youtube.com/watch?v=QGcVXgEVMJg)
 
 
-## Testing & Debugging
+## Testing, Debugging, Benchmarking, & Profiling
 
 * [Unit Tests, How to Write Testable Code and Why it Matters](https://www.toptal.com/qa/how-to-write-testable-code-and-why-it-matters)
 * [10 Debugging Tips for Beginners: How to Troubleshoot and Fix Your Code Without Pulling Your Hair Out](https://blog.hartleybrody.com/debugging-code-beginner/)
 * [How to Debug Any Problem](https://hackernoon.com/how-to-debug-any-problem-ac6f8a867fae)
 * also, use a proper debugging tool
 * or, consider giving up and trying a different approach
+* [perf zine](https://jvns.ca/perf-zine.pdf) by [Julia Evans](https://jvns.ca/)
+* [flame graphs](http://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html)
+* [gperftools how to](https://gperftools.github.io/gperftools/cpuprofile.html)
+* tools: [Compiler Explorer](https://godbolt.org/), [Quick Bench](https://quick-bench.com/), and [C++ Insights](https://cppinsights.io/)
 
 ## Horrible, C++-Specific Gotchas
 
