--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -154,6 +154,9 @@ getting around faster:
 * [Not My Job: We Quiz Rocket Scientist Tiera Fletcher On 'Space Jam'](https://www.npr.org/2019/07/13/740994717/not-my-job-we-quiz-rocket-scientist-tiera-fletcher-on-space-jam)
 * [The Underhanded C Contest](http://underhanded-c.org/)
   * :smiling_imp: "[Your program must inexplicably misroute a piece of luggage if the right kind of free text comment is provided by the check-in clerk.](http://underhanded-c.org/_page_id_22.html)"
+* [New Yorker Radio Hour: Unearthing Entombed](https://www.wnycstudios.org/podcasts/tnyradiohour/segments/unearthing-entombed)
+  * digital archaeologist is a job you can have now (?!)
+  * twist ending about intellectual property
 
 ## Let's Chat!
 
