Add link to David Sankel talk

--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -37,6 +37,7 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
 
 ## Good Code: Philosophy
 
+* [C++Now 2019: David Sankel “C++: Engineers Wanted, Programmers not so Much”](https://youtu.be/eRHLuuFMtx4)
 * [Applying the Linus Torvalds “Good Taste” Coding Requirement](https://medium.com/@bartobri/applying-the-linus-tarvolds-good-taste-coding-requirement-99749f37684a)
   * don't bother with the original TED talk, it's mostly hero-worshiping B.S.
 * [The Zen of Python](https://www.python.org/dev/peps/pep-0020/)
