--- a/blog_professional/_posts/2020-06-04-soap-box.md
+++ b/blog_professional/_posts/2020-06-04-soap-box.md
@@ -84,6 +84,9 @@ I found that I was repeatedly re-googling links to share with new mentees, so I 
   * `A a();`
   * you're just tryna make an `A` called `a`
   * but compiler bae thinks you're tryna declare a function `a` that returns an `A`
+* [`std::numeric_limits<T>::min()`](https://en.cppreference.com/w/cpp/types/numeric_limits/min)
+  * returns smallest finite *positive* value for floating-point types (not the most extreme finite *negative* value)
+* [CppCon 2017: Louis Brandy “Curiously Recurring C++ Bugs at Facebook”](https://youtu.be/lkgszkPnV8g)
 * start reading from the TOP of horribly long compiler error messages: `unbuffer make 2&>1 | less -r`
 
 ## Text Editor & Shell
