Fix water units

--- a/blog_recipes/_posts/2021-12-25-horchata.md
+++ b/blog_recipes/_posts/2021-12-25-horchata.md
@@ -15,7 +15,7 @@ recipe:
     * 1 tbsp. cinnamon
     * 12 oz. evaporated milk (1 can)
     * 1.5 cups milk or almond milk
-    * 2x 1 L water
+    * 2x 1L water
 
   directions_markdown: |-
     1. add 1L water, rice, cinnamon, and almonds to a bowl or casserole dish
@@ -26,6 +26,6 @@ recipe:
     6. strain liquid into pitcher
     7. add sugar, vanilla, and milk
     8. stir until well mixed
-    9. add water
+    9. add 1L water
     10. refrigerate until served 
 ---
