--- a/blog_recipes/_posts/2022–07-16-bagels.md
+++ b/blog_recipes/_posts/2022–07-16-bagels.md
@@ -1,6 +1,6 @@
-—
+---
 layout: recipe
-title: “Bagels”
+title: "Bagels"
 date: 2022-07-16
 recipe:
   source_name: Lauren
@@ -21,5 +21,5 @@ recipe:
     6. make the holes
     7. simmer bagels 2 min then flip for 1 min
     8. bake for 20 to 25 minutes
-—
+—--
 
