--- a/blog_efflux/_posts/2022-01-01-hstrat.md
+++ b/blog_efflux/_posts/2022-01-01-hstrat.md
@@ -9,7 +9,7 @@ authors:
   - Matthew Andres Moreno
   - Emily Dolson
   - Charles Ofria
-abstract: |
+description: |
   hstrat enables phylogenetic inference on distributed digital evolution populations
 bibtex: |-
   @article{moreno2022hereditary,
