--- a/blog_efflux/_posts/2020-01-01-conduit.md
+++ b/blog_efflux/_posts/2020-01-01-conduit.md
@@ -8,6 +8,6 @@ authors:
   - Matthew Andres Moreno
   - Santiago Rodriguez Papa
   - Charles Ofria
-abstract: |
+description: |
   C++ library that wraps intra-thread, inter-thread, and inter-process communication in a uniform, modular, object-oriented interface, with a focus on asynchronous high-performance computing applications.
 ---
