--- a/blog_efflux/_posts/2022-01-01-hstrat.md
+++ b/blog_efflux/_posts/2022-01-01-hstrat.md
@@ -10,7 +10,8 @@ authors:
   - Emily Dolson
   - Charles Ofria
 description: |
-  hstrat enables phylogenetic inference on distributed digital evolution populations
+  hstrat enables phylogenetic inference on distributed digital evolution populations.
+venue: Python package published via PyPI
 bibtex: |-
   @article{moreno2022hereditary,
     author = {Moreno, Matthew Andres and Dolson, Emily and Ofria, Charles},
