--- a/blog_efflux/_posts/2020-10-25-g-fyi.md
+++ b/blog_efflux/_posts/2020-10-25-g-fyi.md
@@ -8,6 +8,7 @@ view_publisher: https://fyinfo.shinyapps.io/gwinnett-fyi/
 authors:
   - Anonymous Collaborator
   - Matthew Andres Moreno
+venue: Shiny R app published via shinyapps.io
 description: |
   This website pulls directly from publicly available Gw███tt County Public Schools (GCPS) data.
   As the data on the website are provided as discrete pdf files per day, it can be difficult to see patterns.
