--- a/blog_projects/_posts/0001-01-01-automap.md
+++ b/blog_projects/_posts/0001-01-01-automap.md
@@ -5,9 +5,5 @@ slug: automap
 theme: evolvability
 ---
 
+![](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
 BLABLABLA
-
-<img src="/resources/depo-consensus-problem-difficulty.png" width="100%">
-<img src="/resources/depo-consensus-problem-difficulty.png" width="100%">
-<img src="/resources/depo-consensus-problem-difficulty.png" width="100%">
-<img src="/resources/depo-consensus-problem-difficulty.png" width="100%">
