Fixup project tiles, add captions

--- a/blog_projects/_posts/0001-01-01-hstrat.md
+++ b/blog_projects/_posts/0001-01-01-hstrat.md
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: "Robust Distributed Phylogenetic Inference"
+title: "Robust Phylogenetic Inference over Parallel and Distributed Digital Evolution Systems"
 slug: hstrat
 theme: scaling-up
 ---
 
-![](/resources/cover-hstrat.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+![retention visualization for hereditary stratigraphy policy](/resources/cover-hstrat.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+_Retention visualization for hereditary stratigraphy policy._
