--- a/blog_projects/_posts/0001-01-01-automap.md
+++ b/blog_projects/_posts/0001-01-01-automap.md
@@ -1,9 +1,9 @@
 ---
 layout: project
-title: "AutoMap"
+title: "Developing Methodology for Automatic Generation of Evolvable Genotype-Phenotype Maps"
 slug: automap
 theme: evolvability
 ---
 
-![](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-BLABLABLA
+![visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map.](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+_Visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map._
