--- a/blog_projects/_posts/0001-01-01-conduit.md
+++ b/blog_projects/_posts/0001-01-01-conduit.md
@@ -1,10 +1,10 @@
 ---
 layout: project
-title: "Best-Effort Computing"
+title: "Harnessing Best-Effort Computing to Enable Dynamic Artificial Life Simulations at Scale"
 slug: conduit
 theme: scaling-up
 ---
-![](/resources/cover-conduit.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-
+![cartoon illustration of communication between simulation elements in experiment with Conduit software](/resources/cover-conduit.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+_Cartoon illustration of communication between simulation elements in experiment with Conduit software._
 
 BLABLABLA
