--- a/blog_projects/_posts/0001-01-01-dishtiny.md
+++ b/blog_projects/_posts/0001-01-01-dishtiny.md
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: "Digital Multicellularity"
+title: "Studying Complexity, Novelty, and Adaptation via Digital Multicellularity Evolution Experiments"
 slug: dishtiny
 theme: scaling-up
 ---
 
-![](/resources/cover-dishtiny.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+![sequence of multicellular phenotypes observed in a DISHTINY experiment](/resources/cover-dishtiny.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+_Sequence of multicellular phenotypes observed in a DISHTINY experiment._
